adding basic build interfaces
this will add a dashboard that shows a table of builds, along with
a build information page that shows three columns with a summary,
details of the build environment, and phase status and output.
We likely will want to tweak this to better fit our needs when we know
what those needs are

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/apps/base/templates/base/navigation.html
+++ b/spackmon/apps/base/templates/base/navigation.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="{% url 'main:dashboard' %}">  
-      <a href="https://spack.io">
+      <a href="{% url 'main:dashboard' %}">
         <img src="{% static 'img/spackmon.png' %}" height="50px" style="padding-left:10px"/>
       </a>      
       <span class="projectname" style="width:200px; padding-left:20px">Spack Monitor</span>  
@@ -13,14 +13,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="{% url 'main:dashboard' %}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Analyses
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Action</a>
@@ -30,9 +27,9 @@
         </div>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <!--<form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-spack my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </form>-->
   </div>
 </nav>
