--- a/spackmon/apps/base/templates/base/footer.html
+++ b/spackmon/apps/base/templates/base/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
   <div id="footerlinks" class="clearfix">
-    <span id="footertext">
+    <span id="footertext" style="padding-right:30px">
       Spack Monitor {{ SPACK_MONITOR_VERSION }}
       with ❤️ from <a href="https://github.com/spack">Spack Contributors</a> |
       <a href="https://github.com/spack/spack-monitor/issues" target="blank">Ask for help</a>
