fix up template to not have snakemake
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/apps/base/templates/base/base.html
+++ b/spackmon/apps/base/templates/base/base.html
@@ -15,16 +15,16 @@
         <meta name="keywords" content="spack,monitoring" />
         <meta name="author" content="vsoch" />
         <meta name="robots" content="noindex,nofollow" />
-        <link rel="icon" type="image/ico" href="/static/img/favicon.ico"/>
+        <link rel="icon" type="image/ico" href="/static/favicon.ico"/>
 
         <!-- Facebook and Twitter integration -->
         <meta property="og:title" content="Spackmon"/>
-        <meta property="og:image" content="{% static 'images/logo-temporary.png' %}"/>
+        <meta property="og:image" content="{% static 'img/spackmon.png' %}"/>
         <meta property="og:url" content="{{ DOMAIN }}"/>
-        <meta property="og:site_name" content="Snakeface"/>
+        <meta property="og:site_name" content="Spack Monitor"/>
 
-        <meta property="og:description" content="Snakeface"/>
-        <meta name="twitter:title" content="Snakeface" />
+        <meta property="og:description" content="Spack Monitor"/>
+        <meta name="twitter:title" content="Spack Monitor" />
         <meta name="twitter:image" content="{% static 'img/spackmon.png' %}" />
         {% if TWITTER_USERNAME %}<meta name="twitter:url" content="https://twitter.com/{{ TWITTER_USERNAME }}" />{% endif %}
         <meta name="twitter:card" content="summary" />
