--- a/spackmon/apps/base/templates/base/base.html
+++ b/spackmon/apps/base/templates/base/base.html
@@ -15,7 +15,7 @@
         <meta name="keywords" content="spack,monitoring" />
         <meta name="author" content="vsoch" />
         <meta name="robots" content="noindex,nofollow" />
-        <link rel="icon" type="image/ico" href="/static/favicon.ico"/>
+        <link rel="icon" type="image/ico" href="/static/img/favicon.ico"/>
 
         <!-- Facebook and Twitter integration -->
         <meta property="og:title" content="Spackmon"/>
