--- a/spackmon/apps/main/templates/builds/detail.html
+++ b/spackmon/apps/main/templates/builds/detail.html
@@ -16,6 +16,8 @@
 
       <b>Environment: </b>{{ build.build_environment.arch }}
       <br>
+      <b>Compiler: </b>{{ build.spec.compiler }}
+      <br>
       <b>Created At: </b>{{ build.add_date }}
       <br>
 
