add some bottom padding to spec summary
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/apps/main/templates/builds/detail.html
+++ b/spackmon/apps/main/templates/builds/detail.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 
-<div class="row">
+<div class="row" style="padding-bottom:25px">
    <div class="col-md-4">
       <h4>Summary</h4>
 
