--- a/spackmon/apps/main/templates/builds/detail.html
+++ b/spackmon/apps/main/templates/builds/detail.html
@@ -4,10 +4,23 @@
 {% load static %}
 {% block page_title %}Build > {{ build }}{% endblock %}
 {% block css %}
+<style>
+pre {
+  max-height: none !important; /*workaround for Prism scrollbars*/
+}
+</style>
 {% endblock %}
 {% block content %}
 
 <div class="row" style="padding-bottom:25px">
+    <div class="col-md-2">
+        <h4></h4>
+        <ul class="list-group">
+        {% if build.build_warnings_parsed > 0 %}<a href="#build-warnings"><li class="list-group-item">Warnings</li></a>{% endif %}
+        {% if build.build_errors_parsed > 0 %}<a href="#build-errors"><li class="list-group-item">Errors</li></a>{% endif %}
+        {% if build.buildphase_set.count > 0 %}<a href="#full-logs"><li class="list-group-item">Full Logs</li></a>{% endif %}
+        </ul>
+    </div>
    <div class="col-md-4">
       <h4>Summary</h4>
 
@@ -38,11 +51,69 @@
       <b>Kernel Version: </b>{{ build.build_environment.kernel_version }}
       <br>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-2">
         {% include "builds/phase_table.html" %}
     </div>
 </div>
 
+
+{% if build.build_warnings_parsed > 0 %}<div class="row">
+    <div class="col-md-12">
+      <h4 id="build-warnings">Build Warnings</h4>
+
+<div id="accordion">
+  {% for warning in build.build_warnings %}<div class="card" style="padding:0px 5px;">
+    <div class="card-header" id="heading-warning-{{ warning.id }}">
+      <h5 class="mb-0">
+        <a data-toggle="collapse" data-target="#collapse-warning-{{ warning.id }}" aria-expanded="true" aria-controls="collapseOne">
+          <span class="alert alert-warning" style="color:black; width:100%; display:block">{{ warning.text }}</span>
+        </a>
+      </h5>
+    </div>
+
+    <div id="collapse-warning-{{ warning.id }}" class="collapse show" aria-labelledby="heading-warning-{{ warning.id }}" data-parent="#accordion">
+      <div class="card-body">
+      <pre data-line=5 class="line-numbers"><code class="language-console">
+         {{ warning.pre_context }}
+         {{ warning.text }}
+         {{ warning.post_context }}      
+      </code></pre>
+      </div>
+    </div>
+  </div>{% endfor %}
+</div>
+    </div>
+</div>{% endif %}
+{% if build.build_errors_parsed > 0 %}<div class="row">
+    <div class="col-md-12">
+      <h4 id="build-errors">Build Errors</h4>
+
+<div id="accordion">
+  {% for error in build.build_errors %}<div class="card" style="padding:0px 5px;">
+    <div class="card-header" id="heading-error-{{ error.id }}">
+      <h5 class="mb-0">
+        <a data-toggle="collapse" data-target="#collapse-error-{{ error.id }}" aria-expanded="true" aria-controls="collapseOne">
+          <span class="alert alert-danger" style="width:100%; display:block">{{ error.text }}</span>
+        </a>
+      </h5>
+    </div>
+
+    <div id="collapse-error-{{ error.id }}" class="collapse show" aria-labelledby="heading-error-{{ error.id }}" data-parent="#accordion">
+      <div class="card-body">
+      <pre data-line=5 class="line-numbers"><code class="language-console">
+         {{ error.pre_context }}
+         {{ error.text }}
+         {{ error.post_context }}      
+      </code></pre>
+      </div>
+    </div>
+  </div>{% endfor %}
+</div>
+    </div>
+</div>{% endif %}
+
+{% if build.buildphase_set.count > 0 %}
+<h4 id="full-logs">Full Logs</h4>
 {% for phase in build.buildphase_set.all %}
 <div class="title-divider" id="phase-{{ phase.name }}">
     {{ phase.name }}
@@ -50,11 +121,13 @@
 {% if phase.output %}<b>Output: </b>
       <br>
       <pre>{{ phase.output }}</pre>{% else %}<p class="alert alert-secondary">This phase does not have any output</p>{% endif %}
-{% endfor %}
+{% endfor %}{% endif %}
 {% endblock %}
 {% block scripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js"></script>
 <script>
 $(document).ready(function() {
+   $('.collapse').collapse()
 });
 </script>
 {% endblock %}
