--- a/spackmon/apps/base/templates/base/navigation.html
+++ b/spackmon/apps/base/templates/base/navigation.html
@@ -26,6 +26,18 @@
           <a class="dropdown-item" href="#">Something else here</a>-->
         </div>
       </li>
+{% if request.user.is_authenticated %}<li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ request.user.username }}</a>
+          <div class="dropdown-menu dropdown-menu-right">
+              <a class="dropdown-item" href="{% url 'users:profile' %}">Settings</a>
+              <a class="dropdown-item" href="{% url 'users:token' %}">Token</a>
+              <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="{% url 'users:logout' %}">Logout</a>
+              </div>
+         </li>
+         {% else %}
+          <li class="nav-item"> <a class="nav-link" href="{% url 'users:login' %}">Login</a>
+       </li>{% endif %}
     </ul>
     <!--<form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
