adding support for larger builds
also sorting the front page table with fails /cancelled at the top, fixing
a bug with by user filter, and making the default table size 100

Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/apps/main/templates/main/index.html
+++ b/spackmon/apps/main/templates/main/index.html
@@ -78,7 +78,7 @@ code {
 {% block scripts %}
 <script>
 $(document).ready(function(){
-    $("#builds_table").dataTable({"order": [[ 3, "desc" ]], "pageLength": 10, "processing": true, "serverSide": true, "ajax": "{% url 'api:internal_apis:builds_table' %}{% if tag %}?tag={{ tag }}{% endif %}", "lengthMenu": [[10,15,20,25], [10,15,20,25]],
+    $("#builds_table").dataTable({"order": [[ 3, "asc" ]], "pageLength": 100, "processing": true, "serverSide": true, "ajax": "{% url 'api:internal_apis:builds_table' %}{% if tag %}?tag={{ tag }}{% endif %}", "lengthMenu": [[25,50,100,250], [25,50,100,250]],
     columnDefs: [ {
     targets: 3,
     createdCell: function (td, cellData, rowData, row, col) {
