--- a/spackmon/apps/base/templates/base/navigation.html
+++ b/spackmon/apps/base/templates/base/navigation.html
@@ -25,6 +25,7 @@
           <a class="dropdown-item" href="{% url 'main:package-analysis-results' %}">Analysis Results</a>
           <a class="dropdown-item" href="{% url 'main:package-analysis-diffs' %}">Analysis Diffs</a>
           <a class="dropdown-item" href="{% url 'main:stability-test-package' %}">Stability Test</a>
+          <a class="dropdown-item" href="{% url 'main:symbols-test-package' %}">Symbol Splicing</a>
           <!--<div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>-->
         </div>
