tweaking views to have better filtering
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/spackmon/apps/main/templates/analysis/diffs.html
+++ b/spackmon/apps/main/templates/analysis/diffs.html
@@ -16,7 +16,7 @@
     </style>
 {% endblock %}
 {% block content %}
-
+{% include "messages/message.html" %}
 <div class="row">
    <div class="col-md-12">
       <h2 style="align:center">Analysis Diff</h2>
