--- a/spackmon/apps/main/templates/matrix/package.html
+++ b/spackmon/apps/main/templates/matrix/package.html
@@ -43,7 +43,7 @@
 </style>
 {% endblock %}
 {% block content %}
-
+{% include "messages/message.html" %}
 <div class="row">
    <div class="col-md-12">
       <h2 style="align:center">Package Matrix</h2>
@@ -154,7 +154,7 @@ function generate_plot(dimension) {
     // Create rows - so one version across dimension
     {% for row in rows %}
     row = []{% for entry in row %}
-    row.push({"spec": {% if entry.spec %}{{ entry.spec.to_json | safe }}{% else %}{}{% endif %}, "value": {{ entry.value }}, "status": "{{ entry.status }}", "spec_id": "{{ entry.spec_id }}", "failed": {{ entry.failed }}, "cancelled": {{ entry.cancelled}}, "success": {{ entry.success }}, "total": {{ entry.total }}, "notrun": {{ entry.notrun }} });{% endfor %}
+    row.push({"spec": {% if entry.spec %}{{ entry.spec.to_json | safe }}{% else %}{}{% endif %}, "value": {{ entry.value }}, "status": "{{ entry.status }}", "spec_id": "{{ entry.spec_id }}", "failed": {% if entry.failed %}{{ entry.failed }}{% else %}0{% endif %}, "cancelled": {% if entry.cancelled %}{{ entry.cancelled}}{% else %}0{% endif %}, "success": {% if entry.success %}{{ entry.success }}{% else %}0{% endif %}, "total": {% if entry.total %}{{ entry.total }}{% else %}0{% endif %}, "notrun": {% if entry.notrun %}{{ entry.notrun }}{% else %}0{% endif %} });{% endfor %}
     matrix.push(row);{% endfor %}
 
     console.log(matrix)
